<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome_select"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_select_desc"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="24sp"
        android:textColor="@color/text_grey"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="-5dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/brand_blue"
        app:cornerRadius="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cornerRadius="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/ivFlagSelect"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_flag_us"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_lang"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/text_grey"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_guest"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/brand_blue"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="36dp"/>

</LinearLayout>