<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_desc"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="24sp"
        android:textColor="@color/text_grey"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="#757575"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailSign"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/pass_hint"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassSign"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_pass_hint"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUpAction"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_signup"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:backgroundTint="@color/brand_blue"
        app:cornerRadius="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp">
        <View android:layout_width="80dp" android:layout_height="1dp" android:background="@color/text_grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_signup"
            android:textColor="@color/text_grey"
            android:layout_marginHorizontal="8dp"/>
        <View android:layout_width="80dp" android:layout_height="1dp" android:background="@color/text_grey"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/google_btn"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:cornerRadius="8dp"/>

    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/has_account"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textColor="@color/brand_blue"/>

</LinearLayout>