<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_title"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_desc"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/text_grey"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_hint"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_pass_hint"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmNewPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetAction"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_reset"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:backgroundTint="@color/brand_blue"
        app:cornerRadius="8dp"/>

    <TextView
        android:id="@+id/tvBackToLoginReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"/>

</LinearLayout>