<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical">
        <ImageView
            android:id="@+id/btnBackAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_back"
            android:padding="12dp"
            android:contentDescription="Back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:text="@string/new_task_title"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:maxLength="25"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_otp_box"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/desc_hint"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_otp_box"
        android:padding="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:fontFamily="@font/montserrat_bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_save"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/brand_blue" />
</LinearLayout>