<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_reset"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_desc"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="24sp"
        android:textColor="@color/text_grey"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_check_box"
        android:padding="20dp"
        android:background="@drawable/bg_otp_box"
        android:backgroundTint="#0D47A1"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/tvBackToLoginFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

</LinearLayout>